--- a/index.html
+++ b/index.html
@@ -1,3 +1,38 @@
-<html lang="en"> 
-    branch1 test
-    branch2 test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <main>
+        <section>
+            <h2>About</h2>
+            <p>This is a simple website created using HTML, CSS, and JavaScript.</p>
+        </section>
+        <section>
+            <h2>Contact</h2>
+            <p>You can reach us at <a href="mailto:info@example.com">info@example.com</a>.</p>
+        </section>
+        <button id="toggleButton">Toggle Section</button>
+<section id="sectionToToggle">
+    <p>This section can be toggled on and off.</p>
+</section>
+
+<div>
+    <img id="sliderImage" src="image1.jpg" alt="Slider Image">
+    <button id="prevButton">Previous</button>
+    <button id="nextButton">Next</button>
+</div>
+    </main>
+    <!-- <footer>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
+    </footer> -->
+    <script src="script.js"></script>
+</body>
+</html>
